tests/baselines/reference/narrowingOfQualifiedNames.errors.txt
tests/cases/compiler/narrowingOfQualifiedNames.ts(35,33): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/narrowingOfQualifiedNames.ts(37,37): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/narrowingOfQualifiedNames.ts(40,41): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/narrowingOfQualifiedNames.ts(40,41): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/narrowingOfQualifiedNames.ts(42,45): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/narrowingOfQualifiedNames.ts(42,45): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/narrowingOfQualifiedNames.ts (6 errors) ====
    // Repro from #43411
    
    interface IProperties {
        foo?: {
            aaa: string
            bbb: string
        }
    }
    
    function init(properties: IProperties) {
        if (properties.foo) {
            type FooOK = typeof properties.foo;
            properties.foo; // type is { aaa: string; bbb: string; }
            for (const x of [1, 2, 3]) {
              properties.foo; // type is { aaa: string; bbb: string; }
              type FooOrUndefined = typeof properties.foo; //type is { aaa: string; bbb: string; } | undefined
            }
        }
    }
    
    interface DeepOptional {
        a?: {
            b?: {
                c?: string
            }
        }
    }
    
    function init2(foo: DeepOptional) {
        if (foo.a) {
            for(const _ of [1]) {
                type A = typeof foo.a;
    
                if (foo.a.b) {
                    type B = typeof foo.a.b;
                                    ~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                    for(const _ of [1]) {
                        type B = typeof foo.a.b;
                                        ~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    
                        if (foo.a.b.c) {
                            type C = typeof foo.a.b.c;
                                            ~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                                            ~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            for(const _ of [1]) {
                                type C = typeof foo.a.b.c;
                                                ~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                                                ~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                            }
                        }
                    } 
                }
            }
        }
    }